Python: Image and camera fixes
Core: image fix

--- a/modules/python3/bindings/CMakeLists.txt
+++ b/modules/python3/bindings/CMakeLists.txt
@@ -3,6 +3,7 @@ set(HEADER_FILES
     include/inviwopy/inviwopy.h
     include/inviwopy/pybuffer.h
     include/inviwopy/pycamera.h
+    include/inviwopy/pycameraproperty.h
     include/inviwopy/pydataformat.h
     include/inviwopy/pydatamapper.h
     include/inviwopy/pyevent.h
@@ -30,6 +31,7 @@ set(SOURCE_FILES
     src/inviwopy.cpp
     src/pybuffer.cpp
     src/pycamera.cpp
+    src/pycameraproperty.cpp
     src/pydataformat.cpp
     src/pydatamapper.cpp
     src/pyevent.cpp
