--- a/src/qt/applicationbase/CMakeLists.txt
+++ b/src/qt/applicationbase/CMakeLists.txt
@@ -25,16 +25,23 @@ ivw_group("Source Files" ${SOURCE_FILES})
 
 #--------------------------------------------------------------------
 # Create library
-find_package(Qt5Core QUIET REQUIRED)
-find_package(Qt5Gui QUIET REQUIRED)
-find_package(Qt5Widgets QUIET REQUIRED)
+find_package(QT NAMES Qt6 Qt5 COMPONENTS Core Gui Widgets REQUIRED)
+find_package(Qt${QT_VERSION_MAJOR} COMPONENTS Core Gui Widgets REQUIRED)
 
-qt5_wrap_cpp(MOCED_FILES ${MOC_FILES})
+qt_wrap_cpp(MOCED_FILES ${MOC_FILES})
 source_group("MOC Files" FILES ${MOCED_FILES})
 
 add_library(inviwo-qtapplicationbase ${SOURCE_FILES} ${MOCED_FILES} ${HEADER_FILES})
 add_library(inviwo::qtapplicationbase ALIAS inviwo-qtapplicationbase)
-target_link_libraries(inviwo-qtapplicationbase PUBLIC inviwo-core Qt5::Core Qt5::Gui Qt5::Widgets)
+target_link_libraries(inviwo-qtapplicationbase PUBLIC 
+	inviwo-core
+	Qt${QT_VERSION_MAJOR}::Core
+	Qt${QT_VERSION_MAJOR}::Gui
+	Qt${QT_VERSION_MAJOR}::Widgets
+)
+target_compile_definitions(inviwo-qtapplicationbase PUBLIC 
+    "QT_DEPRECATED_WARNINGS_SINCE=QT_VERSION_CHECK(5, 15, 0)"
+)
 
 #--------------------------------------------------------------------
 # Define defintions
@@ -44,6 +51,10 @@ ivw_define_standard_properties(inviwo-qtapplicationbase)
 #--------------------------------------------------------------------
 # Make package (for other projects to find)
 ivw_default_install_comp_targets(qt_applicationbase inviwo-qtapplicationbase)
-ivw_qt_add_to_install(inviwo-qtapplicationbase Qt5Core Qt5Gui Qt5Widgets)
+ivw_qt_add_to_install(inviwo-qtapplicationbase 
+	Qt${QT_VERSION_MAJOR}Core
+	Qt${QT_VERSION_MAJOR}Gui
+	Qt${QT_VERSION_MAJOR}Widgets
+)
 ivw_make_package(InviwoQtApplicationBase inviwo-qtapplicationbase)
 
