--- a/apps/inviwopyapp/CMakeLists.txt
+++ b/apps/inviwopyapp/CMakeLists.txt
@@ -2,9 +2,10 @@
 # Inviwo Qt Application
 project(inviwopyapp)
 
-find_package(Qt5Core QUIET REQUIRED)
-find_package(Qt5Gui QUIET REQUIRED)
-find_package(Qt5Widgets QUIET REQUIRED)
+find_package(QT NAMES Qt6 Qt5 COMPONENTS Core Gui Widgets REQUIRED)   
+find_package(Qt${QT_VERSION_MAJOR} COMPONENTS Core Gui Widgets REQUIRED)
+
+
 find_package(pybind11 CONFIG REQUIRED)
 
 #--------------------------------------------------------------------
@@ -29,14 +30,16 @@ target_link_libraries(inviwopyapp PUBLIC
     inviwo::core
     inviwo::qtapplicationbase
     inviwo::module::qtwidgets
-    Qt5::Core
-    Qt5::Gui
-    Qt5::Widgets
+    Qt${QT_VERSION_MAJOR}::Core
+    Qt${QT_VERSION_MAJOR}::Gui
+    Qt${QT_VERSION_MAJOR}::Widgets
 )
 ivw_configure_application_module_dependencies(inviwopyapp ${enabled_modules})
 ivw_define_standard_definitions(inviwopyapp inviwopyapp) 
 ivw_define_standard_properties(inviwopyapp)
-
+target_compile_definitions(inviwopyapp PUBLIC 
+    "QT_DEPRECATED_WARNINGS_SINCE=QT_VERSION_CHECK(5, 15, 0)"
+)
 #--------------------------------------------------------------------
 # Move to folder
 ivw_folder(inviwopyapp minimals)
