OpenGlQt: typo fix

--- a/modules/openglqt/CMakeLists.txt
+++ b/modules/openglqt/CMakeLists.txt
@@ -3,7 +3,7 @@
 ivw_module(OpenGLQt)
 
 find_package(QT NAMES Qt6 Qt5 COMPONENTS Svg OpenGL REQUIRED)
-if(${QT_VERSION_MAJOR} EQUAL 6)
+if(QT_VERSION_MAJOR EQUAL 6)
     find_package(Qt6 COMPONENTS Svg OpenGL OpenGLWidgets REQUIRED)
 else()
     find_package(Qt5 COMPONENTS Svg OpenGL REQUIRED)
@@ -59,9 +59,8 @@ ivw_create_module(NO_PCH ${SOURCE_FILES} ${MOCED_FILES} ${HEADER_FILES})
 target_link_libraries(inviwo-module-openglqt PRIVATE 
     Qt${QT_VERSION_MAJOR}::OpenGL
     Qt${QT_VERSION_MAJOR}::Svg
-    Qt${QT_VERSION_MAJOR}::OpenGLWidgets
 )
-if(${QT_VERSION_MAJOR} EQUAL 6)
+if(QT_VERSION_MAJOR EQUAL 6)
     target_link_libraries(inviwo-module-openglqt PRIVATE Qt6::OpenGLWidgets)
 endif()
 
