--- a/modules/openglqt/CMakeLists.txt
+++ b/modules/openglqt/CMakeLists.txt
@@ -1,21 +1,19 @@
-#--------------------------------------------------------------------
 # Inviwo OpenGLQt Module
 ivw_module(OpenGLQt)
 
+# https://doc-snapshots.qt.io/qt6-dev/cmake-qt5-and-qt6-compatibility.html#supporting-older-qt-5-versions
 find_package(QT NAMES Qt6 Qt5 COMPONENTS Svg OpenGL REQUIRED)
 if(QT_VERSION_MAJOR EQUAL 6)
     find_package(Qt6 COMPONENTS Svg OpenGL OpenGLWidgets REQUIRED)
 else()
     find_package(Qt5 COMPONENTS Svg OpenGL REQUIRED)
 endif()
-#--------------------------------------------------------------------
 # Add MOC files
 set(MOC_FILES
     include/modules/openglqt/canvasprocessorwidgetqt.h
     include/modules/openglqt/openglqtmenu.h
 )
 
-#--------------------------------------------------------------------
 # Add header files
 set(HEADER_FILES
     ${MOC_FILES}
@@ -33,7 +31,6 @@ set(HEADER_FILES
 )
 ivw_group("Header Files" ${HEADER_FILES})
 
-#--------------------------------------------------------------------
 # Add source files
 set(SOURCE_FILES
     src/canvasprocessorwidgetqt.cpp
@@ -51,7 +48,11 @@ set(SOURCE_FILES
 )
 ivw_group("Source Files" ${SOURCE_FILES})
 
-qt_wrap_cpp(MOCED_FILES ${MOC_FILES})
+if(QT_VERSION_MAJOR EQUAL 6)
+    qt_wrap_cpp(MOCED_FILES ${MOC_FILES})
+else()
+    qt5_wrap_cpp(MOCED_FILES ${MOC_FILES})
+endif()
 source_group("MOC Files" FILES ${MOCED_FILES})
 
 # Create module
